# stream-coin

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  dockerfile  justfile
.cargo/: audit.toml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: auth.rs  candle.rs  client.rs  config.rs  exchange.rs  main.rs  response.rs  ticker.rs
cli/tests/: cli.rs
compose/: connect.yml  flink.yml  kafka.yml  postgres.yml  proxy.yml  redis.yml  rest-proxy.yml  schema.yml  ui.yml
docs/: ARCHITECTURE.md
engine/: Cargo.toml  build.rs
engine/migrations/: 0001_create_ticker_subscriptions.sql  0002_create_candles.sql  0003_create_strategies.sql  0004_signal_precision_and_strategy_registrations.sql  0005_create_orders.sql  0006_create_python_strategies.sql  0007_create_exchanges_and_trading_pairs.sql  0008_create_users_roles_credentials.sql  0009_fix_hitobit_ws_url_stream_path.sql  0010_drop_explicit_port_from_hitobit_ws_url.sql  0011_seed_coinex_exchange.sql  0012_candles_unique_constraint_and_hypertable.sql  0013_create_assets.sql  0014_trading_pairs_base_quote_to_asset_fk.sql  0015_create_strategy_subscriptions.sql  0016_seed_order_admin_and_strategy_permissions.sql  0017_add_filled_quantity_to_orders.sql  0018_add_user_id_to_orders.sql  0019_create_circuit_breaker_state.sql
engine/src/: lib.rs  wire_message.rs
engine/src/backtest/: engine.rs  entity.rs  mod.rs  venue.rs
engine/src/candle/: aggregator.rs  entity.rs
engine/src/exchange/: entity.rs  historical_port.rs  market_seed_port.rs  mod.rs  port.rs  registry.rs
engine/src/exchange/coinex/: historical_adapter.rs  market_seeder.rs  mod.rs  ws_adapter.rs
engine/src/exchange/hitobit/: mod.rs  ws_adapter.rs
engine/src/exchange/tabdeal/: ws_adapter.rs
engine/src/infrastructure/: config.rs  mod.rs
engine/src/infrastructure/cache/: mod.rs  redis.rs
engine/src/infrastructure/crypto/: credential_cipher.rs  mod.rs  password.rs
engine/src/infrastructure/db/: asset_repository.rs  candle_repository.rs  credential_repository.rs  exchange_repository.rs  mod.rs  order_repository.rs  postgres.rs  python_strategy_repository.rs  signal_repository.rs  strategy_repository.rs  subscription_repository.rs  ticker_repository.rs  user_repository.rs
engine/src/infrastructure/websocket/: ws_client_trait.rs
engine/src/kafka/: port.rs  producer.rs
engine/src/order/: circuit_breaker.rs  circuit_breaker_store.rs  credential_resolver.rs  entity.rs  exir.rs  fake.rs  hitobit.rs  manager.rs  mod.rs  port.rs  signing.rs  tabdeal.rs
engine/src/presentation/: extractors.rs  mod.rs  ws_message.rs
engine/src/presentation/dto/: auth.rs  backtest.rs  candle.rs  credential.rs  exchange.rs  health.rs  mod.rs  order.rs  strategy.rs  subscription.rs  ticker.rs  user.rs
engine/src/presentation/handlers/: admin_handler.rs  auth_handler.rs  backtest_handler.rs  candle_handler.rs  credential_handler.rs  exchange_handler.rs  health_handler.rs  mod.rs  order_handler.rs  registry_handler.rs  strategy_handler.rs  subscription_handler.rs  user_handler.rs  ws_handler.rs
engine/src/presentation/middlewares/: cors.rs  json_error_handler.rs  jwt.rs  mod.rs
engine/src/presentation/responses/: error_response.rs  mod.rs  success_response.rs
engine/src/presentation/routers/: auth_router.rs  backtest_router.rs  candle_router.rs  exchange_routers.rs  mod.rs  order_router.rs  registry_router.rs  strategy_router.rs  subscription_router.rs  user_router.rs
engine/src/presentation/shared/: app_state.rs  broadcast.rs  mod.rs
engine/src/presentation/swagger/: mod.rs
engine/src/price/: entity.rs  port.rs
engine/src/proto/: conversions.rs  mod.rs
engine/src/strategy/: entity.rs  factory.rs  live_trade_tracker.rs  mod.rs  port.rs  runner.rs  subprocess.rs  supervisor.rs
engine/src/strategy/builtin/: mod.rs  price_delta.rs  spread_threshold.rs
engine/src/ticker/: port.rs
engine/tests/: admin_api.rs  backtest_api.rs  backtest_over_persisted_candles.rs  candle_api.rs  candle_backfill_api.rs  candle_repository_postgres.rs  circuit_breaker_store_postgres.rs  cors_api.rs  exchange_repository_postgres.rs  health_api.rs  kafka_producer.rs  order_api.rs  order_repository_postgres.rs  price_contract.rs  python_sdk_compat.rs  python_strategy_repository_postgres.rs  strategy_api.rs  subscription_api.rs  ticker_api.rs  user_api.rs  user_credential_subscription_postgres.rs  ws_auth.rs
nginx/: nginx.conf
proto/: candle.proto  signal.proto
python_sdk/: pyproject.toml
python_sdk/stream_coin/: __init__.py  consumer.py
python_sdk/stream_coin/proto/: __init__.py  candle.py  signal.py
python_sdk/tests/: test_candle_proto.py  test_consumer.py  test_signal_proto.py
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/services/: exchange_service.rs  mod.rs
src/application/use_cases/: mod.rs
src/cli/: client.rs  config.rs  mod.rs
src/config/: actix_web_validator.rs  mod.rs
src/domain/: mod.rs
src/exchange/: entity.rs  port.rs
src/infrastructure/: mod.rs
src/kafka/: mod.rs  port.rs
src/presentation/: http_server.rs  mod.rs
src/price/: entity.rs
src/routers/: mod.rs
src/ticker/: port.rs
tests/: health_api.rs  kafka_producer.rs  ticker_api.rs
ui/: .gitignore  Cargo.toml  index.html  mockup.html
ui/ui_core/: Cargo.toml
ui/ui_core/src/: api.rs  app_shell.rs  auth.rs  dashboard.rs  icons.rs  lib.rs  protocol.rs  reconnect.rs  router.rs  theme.rs
ui/ui_core/src/api/: dto.rs  mod.rs
ui/ui_core/src/components/: add_ticker_form.rs  header.rs  live_feed.rs  mod.rs  ticker_card.rs  ticker_grid.rs
ui/ui_core/src/domain/: exchange.rs  format.rs  mod.rs  ticker.rs
ui/ui_core/src/pages/: admin.rs  backtest.rs  chart.rs  login.rs  mod.rs  orders.rs  settings.rs  strategies.rs
ui/ui_core/src/pages/chart/: glue.js  trade_format.rs
ui/ui_core/src/state/: catalog.rs  mod.rs  playback.rs  store.rs
ui/web/: Cargo.toml  Dioxus.toml
ui/web/assets/: main.css
ui/web/src/: browser.rs  main.rs  ws.rs
(+49 files in other folders)
