[package]
name = "stream-coin"
version = "0.1.0"
#authors = ["Navid Sadeghi navidsadeghi0021@gmail.com, navidsadeghi2@outlook.com"]
edition = "2021"
license = "GPL-3"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0"}
async-trait = "0.1.86"
redis = { version = "0.28.2", features = ["aio", "tokio-comp"]  }
nutype = { version = "0.5.1", features = ["serde"] }
validator = {version =  "0.18.0",features = ["derive"]  }
actix-web-validator = { version = "6.0.0" }
dotenv = "0.15.0"
env_logger = "0.11.6"
utoipa = { version = "5.3.1", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["actix-web"] }

[lib]
name = "stream_coin"
path = "src/lib.rs"


[[bin]]
name = "stream-coin"
path = "bin/api.rs"

