[package]
name = "stream-coin"
version = "0.1.0"
#authors = ["Navid Sadeghi navidsadeghi0021@gmail.com, navidsadeghi2@outlook.com"]
edition = "2021"
license = "GPL-3"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.89"
redis = { version = "0.28.2", features = ["aio", "tokio-comp"]  }
nutype = { version = "0.5.1", features = ["serde"] }
validator = {version =  "0.18.1",features = ["derive"]  }
actix-web-validator = { version = "6.0.0" }
dotenv = "0.15.0"
env_logger = "0.11.8"
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
sea-orm = { version = "1.1.15", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
chrono = "0.4.42"
rdkafka = "0.38.0"
futures = "0.3.31"
uuid = { version = "1.11.0", features = ["v4"] }
log = "0.4.28"

[lib]
name = "stream_coin"
path = "src/lib.rs"


[[bin]]
name = "stream-coin"
path = "bin/http.rs"

