[package]
name = "stream-coin"
version = "0.1.0"
#authors = ["Navid Sadeghi navidsadeghi0021@gmail.com, navidsadeghi2@outlook.com"]
edition = "2021"
license = "GPL-3"

[dependencies]
actix-web = "4.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.89"
redis = { version = "0.28.2", features = ["aio", "tokio-comp"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
utoipa = { version = "5.4.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.28"

[lib]
name = "stream_coin"
path = "src/lib.rs"


[[bin]]
name = "stream-coin"
path = "bin/http.rs"

