[package]
name = "sc"
version = "0.1.0"
authors = ["Navid Sadeghi <navidsadeghi0021@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
description = "CLI to control the stream-coin arbitrage engine"

[dependencies]
clap = { version = "4", features = ["derive", "color"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1", features = ["full"] }
open = "5"
colored = "2"
toml = "0.8"
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"

[package.metadata.deb]
maintainer = "Navid Sadeghi <navidsadeghi0021@gmail.com>"
copyright = "2025, Navid Sadeghi"
extended-description = "CLI to control the stream-coin arbitrage engine"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    { source = "target/release/sc", dest = "usr/bin/", mode = "755" },
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/sc", dest = "/usr/bin/sc", mode = "755" },
]
