[package]
name = "stream-coin"
version = "0.1.0"
authors = ["Navid Sadeghi <navidsadeghi0021@gmail.com>"]
edition = "2021"
license = "GPL-3.0"
description = "Arbitrage engine for Iranian cryptocurrency exchanges"

[dependencies]
actix-web = "4.11.0"
actix-cors = "0.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_path_to_error = "0.1"
tokio = { version = "1", features = ["full", "test-util"] }
async-trait = "0.1.89"
redis = { version = "0.28.2", features = ["aio", "tokio-comp"] }
dotenv = "0.15.0"
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "decimal"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
chrono = { version = "0.4.42", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
rdkafka = { version = "0.37", features = ["cmake-build"] }
actix-ws = "0.3"
jsonwebtoken = "9"
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = { version = "1", features = ["db-postgres"] }
libc = "0.2"
argon2 = "0.5"
aes-gcm = "0.10"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
prost = "0.13"

[build-dependencies]
prost-build = "0.13"
protox = "0.7"

[dev-dependencies]
actix-test = "0.1"
actix-http = "3"
proptest = "1"

[package.metadata.deb]
maintainer = "Navid Sadeghi <navidsadeghi0021@gmail.com>"
copyright = "2025, Navid Sadeghi"
extended-description = "Arbitrage engine for Iranian cryptocurrency exchanges"
depends = "$auto, ca-certificates"
section = "utility"
priority = "optional"
assets = [
    { source = "target/release/stream-coin", dest = "usr/bin/", mode = "755" },
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/stream-coin", dest = "/usr/bin/stream-coin", mode = "755" },
]

[lib]
name = "stream_coin"
path = "src/lib.rs"

[[bin]]
name = "stream-coin"
path = "bin/http.rs"
