[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "stream-coin"
version = "0.1.0"
description = "Python SDK for stream-coin — Kafka consumers for candle/signal Protobuf streams"
requires-python = ">=3.10"
dependencies = [
    "betterproto>=0.9.0,<2.0.0",
    "confluent-kafka>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
