[workspace]
resolver = "2"
members = ["ui_core", "web"]

[workspace.dependencies]
dioxus = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# shared crate: components, state, ws client, domain logic.
# New platforms (web/desktop/mobile) are added as new workspace
# members that depend on this crate — no shared code is duplicated.
ui_core = { path = "ui_core" }
