[package]
name = "ui_core"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
base64 = "0.22"

[dev-dependencies]
serde_json = { workspace = true }
